# CNintendoOllama

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-14-cnintendo-setup.md  2026-03-15-sort-extracted-by-date.md
docs/superpowers/specs/: 2026-03-14-cnintendo-design.md  2026-03-15-sort-extracted-by-date-design.md
src/cnintendo/: cli.py  models.py  ollama_client.py  scan_reader.py
src/cnintendo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cnintendo/commands/: analyze.py  describe.py  enrich.py  export.py  extract.py  inspect.py  process.py  run.py  summarize.py
tests/: conftest.py  test_analyze.py  test_describe.py  test_export.py  test_models.py  test_ollama_client.py  test_process.py  test_process_export.py  test_run_scans.py  test_scan_reader.py  test_summarize.py
tests/commands/: test_analyze.py  test_export.py  test_extract.py  test_inspect.py  test_run.py
tools/: benchmark_models.py  generate_benchmark_report.py
